# darksocks

./: .clang_complete  .gitignore  .travis.yml  Brewfile  CMakeLists.txt  Makefile.am  README.md  configure.ac  darksocks.pc.in
debian/: .gitignore  control  libshadowsocks-libev-dev.install  libshadowsocks-libev2.install  libshadowsocks-libev2.symbols
rpm/SPECS/: shadowsocks-libev.spec.in
src/: Makefile.am  acl.c  acl.h  aead.c  aead.h  android.c  cache.c  cache.h  common.h  crypto.c  crypto.h  darksocks.h  jconf.c  jconf.h  local.c  local.h  manager.c  manager.h  netutils.c  netutils.h  plugin.c  plugin.h  ppbloom.c  ppbloom.h  redir.c  redir.h  server.c  server.h  socks5.h  stream.c  stream.h  tunnel.c  tunnel.h  udprelay.c  udprelay.h  utils.c  utils.h
